Finalizando versão 1.0 do Meu Currículo.

--- a/index.html
+++ b/index.html
@@ -760,14 +760,13 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>
 
-    <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contato</h2>
         </div>
 
         <div class="row mt-1">
@@ -776,20 +775,38 @@
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Localização:</h4>
+                <p>
+                  <a href="https://www.google.com/maps/place/Vargem+Grande,+Rio+de+Janeiro+-+RJ/@-22.9762954,-43.5185846,13z/data=!3m1!4b1!4m5!3m4!1s0x9bdd7fb7fd02e9:0x8d206948f1f0b551!8m2!3d-22.9763118!4d-43.4941892" target="_blank">
+                    Vargem Grande, Rio de Janeiro - RJ
+                  </a>
+                </p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>
+                  <a href="mailto:pedrofigueira87@gmail.com">pedrofigueira87@gmail.com</a>
+                </p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Telefone:</h4>
+                <p>
+                  <a href="tel:+5521973867818">+55 21 9 7386-7818</a>
+                </p>
+              </div>
+
+              <div class="phone">
+                <i class="icofont-phone"></i>
+                <h4>Whatsapp:</h4>
+                <p>
+                  <a href="https://api.whatsapp.com/send?phone=5521973867818" target="_blank">
+                    21 9 7386-7818
+                  </a>
+                </p>
               </div>
 
             </div>
@@ -801,28 +818,28 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Digite o seu Nome" data-rule="minlen:4" data-msg="Por favor, insira 4 ou mais dígitos" />
                   <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Digite o seu Email" data-rule="email" data-msg="Por favor, insira um email válido" />
                   <div class="validate"></div>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Por favor, insira 8 ou mais dígitos no assunto" />
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor, escreva algo neste campo" placeholder="Mensagem"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
-                <div class="loading">Loading</div>
+                <div class="loading">Enviando</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Muito obrigado pela sua mensagem!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
             </form>
 
           </div>
@@ -830,39 +847,37 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
+    </section>
+    
+  </main>
+  
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Pedro Figueira</h3>
+      <p>Programador Web e Mobile. PHP, MySQL, Node.js, React, React Native etc.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.behance.net/pedrofigueira2" class="behance" target="_blank" title="Acesse o meu portfólio no Behance">
+          <i class="bx bxl-behance"></i>
+        </a>
+        <a href="https://github.com/PedroCF87" class="github" target="_blank" title="Confira meu perfil no GitHub">
+          <i class="bx bxl-github"></i>
+        </a>
+        <a href="https://gitlab.com/PedroCF87" class="gitlab" target="_blank" title="Confira meu perfil no GitLab">
+          <i class="bx bxl-gitlab"></i>
+        </a>
+        <a href="https://www.workana.com/freelancer/b459680e571ac3598a97761515916ffe" class="workana" target="_blank" title="Clique para acessar o meu perfil no Workana">
+          <img src="assets/img/icone_workana.png"/>
+        </a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; <strong><span>Meu Currículo</span></strong>. Todos os direitos reservados.
       </div>
     </div>
-  </footer><!-- End Footer -->
-
+  </footer>
+  
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -875,7 +890,6 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
