Atualizando lista de cursos

--- a/index.html
+++ b/index.html
@@ -368,10 +368,48 @@
               <p>Curso de programação mobile avançada.</p>
             </div>
             <div class="resume-item">
-              <h4>Curso de Flutter</h4>
-              <h5>2020 - Atualmente cursando</h5>
+              <h4>Curso de ReactJS</h4>
+              <h5>2017 - 2017</h5>
               <p><em>Udemy</em></p>
-              <p>Curso de programação mobile em Fluter.</p>
+              <p>
+                Curso de programação com ReactJS, um framework de front-end.
+              </p>
+              <p>
+                <a href="https://github.com/PedroCF87/Criando_React_App">Link do projeto</a> desenvolvido durante o curso.
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Curso de NextJS</h4>
+              <h5>2018 - 2018</h5>
+              <p><em>Udemy</em></p>
+              <p>
+                Curso de programação com ReactJS, um framework de front-end.
+              </p>
+              <p>
+                <a href="https://github.com/PedroCF87/Blog_NextJS">Link do projeto</a> desenvolvido durante o curso.
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Curso de AdonisJS</h4>
+              <h5>2018 - 2018</h5>
+              <p><em>Udemy</em></p>
+              <p>
+                Curso de programação com Adonis, um ORM feito em Node.
+              </p>
+              <p>
+                <a href="https://github.com/PedroCF87/curso-NodeJS">Link do projeto</a> desenvolvido durante o curso.
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Curso de Typescript</h4>
+              <h5>2021 - 2021</h5>
+              <p><em>Alura</em></p>
+              <p>
+                Curso de programação com Typescript.
+              </p>
+              <p>
+                <a href="https://github.com/PedroCF87/curso-Typescript">Link do projeto</a> desenvolvido durante o curso.
+              </p>
             </div>
           </div>
           <div class="col-lg-6">
