--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img src="assets/img/perfil.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content">
-            <h3>Desenvolvedor Web e Mobile</h3>
+            <h3>Desenvolvedor Fullstack</h3>
             <p class="font-italic">
               Moro em Vargem Grande e trabalho em Home Office para o <a href="https://www.marinha.mil.br/casnav/" target="_blank">CASNAV</a> (Centro de Analises de Sistemas Navais, Marinha) 
               e como autônomo (freelancer) no sistema do <a href="https://www.workana.com/" target="_blank">Workana</a> (nas horas vagas).
