--- a/index.html
+++ b/index.html
@@ -433,16 +433,16 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Desenvolvedor Web</h4>
+              <h4>Desenvolvedor Fullstack</h4>
               <h5>2012 - 2013</h5>
               <p><em>PlanejaSites.com.br, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
-                <li>Desenvolvimento de projetos web em PHP.</li>
+                <li>Desenvolvimento de projetos web e mobile.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Gerente/Desenvolvedor de Projetos Web e Mobile</h4>
-              <h5>Jan/2013 - Atualmente em meio período</h5>
+              <h4>Desenvolvedor Fullstack</h4>
+              <h5>2013 - Emprego atual</h5>
               <p><em>Workana.com, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento de projetos web em PHP.</li>
@@ -453,11 +453,20 @@
             </div>
             <div class="resume-item">
               <h4>Desenvolvedor React/React Native</h4>
-              <h5>Ago/2020 - Emprego atual</h5>
+              <h5>2020 - Abr/2021</h5>
               <p><em>CASNAV - Marinha, Home Office, Rio de Janeiro, RJ </em></p>
               <ul>
                 <li>Desenvolvimento React em projetos web, criando novos recursos dos sistemas da Marinha.</li>
                 <li>Desenvolvimento de aplicativos Android e IOS em React Native.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Desenvolvedor Fullstack</h4>
+              <h5>Nov/2020 - Emprego atual</h5>
+              <p><em>Sambatech / Samba Digital - Home Office, Rio de Janeiro, RJ</em></p>
+              <ul>
+                <li>Desenvolvimento front-end com ReactJS e NextJS.</li>
+                <li>Desenvolvimento back-end com NodeJS e AdonisJS.</li>
               </ul>
             </div>
           </div>
