--- a/index.html
+++ b/index.html
@@ -117,16 +117,22 @@
             </p>
             <p>
               Após trabalhar na Seplag fiz alguns cursos de programação (HTML, CSS, Javascript, PHP) e comecei a trabalhar 
-              como freelancer no Workana e, pouco depois, no siteFreelance também. Já faz mais de 7 anos que comecei 
+              como freelancer no Workana e, pouco depois, no siteFreelance também. Já faz mais de 8 anos que comecei 
               a trabalhar no Workana (desde 15 de Janeiro de 2013).
             </p> 
             <p>
               Fiz diversos cursos mais avançados, dentre eles, Javascript, Node.js, React, Rect Native, Flutter entre outros.
             </p>
             <p>
-              Recentemente fui contratado pelo CASNAV (Centro de Analises de Sistemas Navais, Marinha) para 
-              trabalhar na fábrica de software, desenvolvendo aplicativos mobile com React Native. Além do Mobile 
-              (React Native), também estou começando a desenvolver projetos web (React Web) "a bordo".
+              Em meados do ano passado fui contratado pelo CASNAV (Centro de Analises de Sistemas Navais, Marinha) para 
+              trabalhar na fábrica de software, desenvolvendo aplicativos mobile com React Native. Além do React Native, 
+              também desenvolvi projetos web em ReactJS.
+            </p>
+            <p>
+              Em dezembro do ano passado fui contratado pela Sambatech, mais específicamente no setor da Samba Digital, como programador 
+              back-end. Em menos de um mês já estava atuando como programador fullstack e líder de equipe. Atualmente sou uma referência 
+              dentro da empresa e estou liderando um dos mais complexos projetos em andamento, implementando uma tecnologia que é 
+              muito difundida pelo mundo, mas que no Brasil ainda não existe.
             </p>
           </div>
         </div>
