--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            
+            <div class="progress">
+              <span class="skill">Serverless <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
 
@@ -287,6 +294,13 @@
               <span class="skill">AWS API Gateway <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Azure DevOps - Pipelines <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -496,8 +510,11 @@
               <p><em>Iron Fit (Portugal) - Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento front-end com Vue, ReactJS e NextJS.</li>
-                <li>Desenvolvimento back-end com NodeJS, AWS Lambdas, AWS API Gateway.</li>
-                <li>Banco de dados MongoDB.</li>
+                <li>Desenvolvimento back-end com NodeJS, AWS Lambdas e Serverless.</li>
+                <li>Banco de dados MongoDB, PostgreeSQL, DynamoDB e SQL Server.</li>
+                <li>DevOps AWS: CodeBuild, API Gateway.</li>
+                <li>DevOps Azure: Serverless Pipelines.</li>
+                <li>Gestão: Jira, Slack, Implementação de Git Flow (CODEOWNERS).</li>
               </ul>
             </div>
 
