--- a/index.html
+++ b/index.html
@@ -469,15 +469,23 @@
             </div>
             <div class="resume-item">
               <h4>Desenvolvedor Fullstack</h4>
-              <h5>2012 - 2013</h5>
-              <p><em>PlanejaSites.com.br, Home Office, Rio de Janeiro, RJ</em></p>
+              <h5>2013 - 2015</h5>
+              <p><em>PlanejaSites, Home Office, Rio de Janeiro, RJ</em></p>
+              <ul>
+                <li>Desenvolvimento de projetos web.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Desenvolvedor Fullstack</h4>
+              <h5>2015 - 2019</h5>
+              <p><em>MobiDesk, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento de projetos web e mobile.</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Desenvolvedor Fullstack</h4>
-              <h5>2013 - Emprego atual</h5>
+              <h5>2013 - 2021</h5>
               <p><em>Workana.com, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento de projetos web em PHP.</li>
@@ -488,7 +496,7 @@
             </div>
             <div class="resume-item">
               <h4>Desenvolvedor React/React Native</h4>
-              <h5>2020 - Abr/2021</h5>
+              <h5>2020 - 2021</h5>
               <p><em>CASNAV - Marinha, Home Office, Rio de Janeiro, RJ </em></p>
               <ul>
                 <li>Desenvolvimento React em projetos web, criando novos recursos dos sistemas da Marinha.</li>
