--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Idade:</strong> <span id="spIdade"></span></li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Nível:</strong> Pleno</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Nível:</strong> Senior</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> pedrofigueira87@gmail.com</li>
                 </ul>
               </div>
