fix: Correção de texto da apresentação

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </p>
             <p>
               Esse ano (2021) fui contratado como programador back-end, em Maio, pela Iron Fit (uma empresa de telemedicina de Portugal). 
-              Dois meses após o meu onboard passei a atuar como Lider Técnico da <a href="http://iron.fit" target="_blank">Iron Fit</a>.
+              Dois meses após o meu onboard fui promovido a Lider Técnico da <a href="http://iron.fit" target="_blank">Iron Fit</a>.
             </p>
           </div>
         </div>
