feat: Atualizando o texto da animação da primeira dobra

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Pedro Figueira</h1>
-      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Web Node.js / PHP / React, Desenvolvedor Mobile React Native p/ Android e IOS, Programador civil no CASNAV - Marinha, Programador freelancer no Workana"></span></p>
+      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Full Stack: NodeJS / ReactJS / PHP, Líder técnico na Iron Fit (Portugal), Desenvolvedor Mobile React Native (Android e IOS)"></span></p>
       <div class="social-links">
         <a href="https://www.behance.net/pedrofigueira2" class="behance" target="_blank" title="Acesse o meu portfólio no Behance">
           <i class="bx bxl-behance"></i>
