--- a/index.html
+++ b/index.html
@@ -277,6 +277,20 @@
             </div>
 
             <div class="progress">
+              <span class="skill">AWS Redshift <i class="val">85%</i> <i class="icofont-badge icoCert icofont-2x"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">PostgreSQL <i class="val">90%</i> <i class="icofont-badge icoCert icofont-2x"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
               <span class="skill">MySQL <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
