Atualizando o currículo digital

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Pedro Figueira</h1>
-      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Full Stack: NodeJS / ReactJS / PHP, Líder técnico na Iron Fit (Portugal), Desenvolvedor Mobile React Native (Android e IOS)"></span></p>
+      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Full Stack: NodeJS / ReactJS / PHP => Fundador da Delfos!!!"></span></p>
       <div class="social-links">
         <a href="https://www.behance.net/pedrofigueira2" class="behance" target="_blank" title="Acesse o meu portfólio no Behance">
           <i class="bx bxl-behance"></i>
@@ -79,9 +79,12 @@
             <img src="assets/img/perfil.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content">
-            <h3>Líder Técnico - Fullstack Dev</h3>
+            <h3>Fullstack Dev</h3>
             <p class="font-italic">
-              Moro em Vargem Grande e trabalho em Home Office para a <a href="http://iron.fit" target="_blank">Iron Fit</a>, atuando como Líder Técnico da empresa.
+              Moro em Vargem Grande, tenho uma casa na Ilha Grande e trabalho em Home Office no projeto Delfos (empresa fundado por mim e dois sócios).
+            </p>
+            <p>
+              Também presto serviços para duas empresas, a URLinks e a DBragas IT.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -107,29 +110,40 @@
             </p>
             <p>
               Saindo de lá fui trabalhar na SEPLAG (Secretaria de Estado de Planejamento e Gestão) na aŕea de levantamento de requisitos, 
-              na SUMOG (Subsecretaria de Modernização da Gestão), onde aprendi a realizar mapeamento de processos em BPMN (Bizagi Studio). 
+              na SUMOG, onde aprendi a realizar mapeamento de processos. 
               Em pouco tempo fiquei responsável pelo treinamento dos novos funcionários na ferramenta de mapeamento.
             </p>
             <p>
               Após trabalhar na Seplag fiz alguns cursos de programação (HTML, CSS, Javascript, PHP) e comecei a trabalhar 
-              como freelancer no Workana e, pouco depois, no siteFreelance também. Já faz mais de 8 anos que comecei 
-              a trabalhar no Workana (desde 15 de Janeiro de 2013).
+              como freelancer no Workana. Trabalhei por mais de 7 anos no Workana (desde 15 de Janeiro de 2013).
             </p> 
             <p>
               Fiz diversos cursos mais avançados, dentre eles, Javascript, Node.js, React, Rect Native, Flutter entre outros.
             </p>
             <p>
-              Em meados dd 2020 fui contratado pelo CASNAV (Centro de Analises de Sistemas Navais, Marinha) para 
-              trabalhar na fábrica de software, desenvolvendo aplicativos mobile com React Native. Além do React Native, 
-              também desenvolvi projetos web em ReactJS.
+              Em meados de 2020 fui contratado pelo CASNAV (Marinha) para trabalhar na fábrica de software, desenvolvendo aplicativos mobile 
+              com React Native. Além do React Native, também desenvolvi projetos web em ReactJS.
             </p>
             <p>
-              Em Novembro de 2020 fui contratado pela Sambatech, mais específicamente no setor da Samba Digital, como programador 
-              back-end. Em menos de um mês já estava atuando como programador fullstack e líder de equipe.
+              Em Novembro de 2020 fui contratado pela Sambatech/Samba Digital, como programador back-end. 
+              Em menos de um mês já estava atuando como programador fullstack e dois meses depois atuei também como líder de equipe.
             </p>
             <p>
-              Esse ano (2021) fui contratado como programador back-end, em Maio, pela Iron Fit (uma empresa de telemedicina de Portugal). 
-              Dois meses após o meu onboard fui promovido a Lider Técnico da <a href="http://iron.fit" target="_blank">Iron Fit</a>.
+              Em Maio de 2021 fui contratado como programador back-end pela Iron Fit (uma empresa de Portugal que trabalha com um SAAS whitelabel de telemedicina).
+              Três meses após o meu onboard fui promovido a Lider Técnico da <a href="http://iron.fit" target="_blank">Iron Fit</a>. 
+              Trabalhei no planejamento da refatoração do sistema (codando também), com migração para microserviços, 
+              escalonamento horizontal do banco de dados (utilizando um proxi reverso), do backend e do frontend (instalando um load balance).
+              Planejei e supervisionei também a adequação à LGPD dos sistemas da Iron e também desenvolvi um sistema financeiro interno.
+            </p>
+            <p>
+              Prestei um ano de serviço para eles e quando encerrou o meu contrato eu resolvi fundar a Delfos.
+            </p>
+            <p>
+              A Delfos é uma Dev Tool (ferramenta para desenvolvedores). Ela auxilia na criação e manutenção de documentações de APIs.
+            </p>
+            <p>
+              Muito em breve o MVP da Delfos vai estar no ar, 
+              e logo depois vamos começar a lançar novas ferramentas incríveis que já estão em fase de desenvolvimento.
             </p>
           </div>
         </div>
@@ -152,7 +166,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">157</span>
+              <span data-toggle="counter-up">168</span>
               <p>Clientes satisfeitos</p>
             </div>
           </div>
@@ -160,7 +174,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-code"></i>
-              <span data-toggle="counter-up">9.760</span>
+              <span data-toggle="counter-up">15.930</span>
               <p>Horas trabalhadas</p>
             </div>
           </div>
@@ -168,7 +182,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">143</span>
+              <span data-toggle="counter-up">165</span>
               <p>Projetos</p>
             </div>
           </div>
@@ -176,7 +190,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-site-map"></i>
-              <span data-toggle="counter-up">16</span>
+              <span data-toggle="counter-up">23</span>
               <p>Grandes Projetos</p>
             </div>
           </div>
@@ -370,7 +384,7 @@
             </div>
             <div class="resume-item">
               <h4>Curso de PHP Orientado a objetos</h4>
-              <h5>2012 - 2013</h5>
+              <h5>2013</h5>
               <p><em>TreinaWeb Tecnologia LTDA</em></p>
               <p>Emitido em jul. de 2013 > Nº da credencial 06.156.637/0001-58</p>
             </div>
@@ -406,7 +420,7 @@
             </div>
             <div class="resume-item">
               <h4>Curso de React Native Básico</h4>
-              <h5>2016 - 2017</h5>
+              <h5>2017</h5>
               <p><em>Udemy</em></p>
               <p>Curso de programação mobile básica.</p>
             </div>
@@ -418,7 +432,7 @@
             </div>
             <div class="resume-item">
               <h4>Curso de ReactJS</h4>
-              <h5>2017 - 2017</h5>
+              <h5>2017</h5>
               <p><em>Udemy</em></p>
               <p>
                 Curso de programação com ReactJS, um framework de front-end.
@@ -429,7 +443,7 @@
             </div>
             <div class="resume-item">
               <h4>Curso de NextJS</h4>
-              <h5>2018 - 2018</h5>
+              <h5>2018</h5>
               <p><em>Udemy</em></p>
               <p>
                 Curso de programação com ReactJS, um framework de front-end.
@@ -440,7 +454,7 @@
             </div>
             <div class="resume-item">
               <h4>Curso de AdonisJS</h4>
-              <h5>2018 - 2018</h5>
+              <h5>2018</h5>
               <p><em>Udemy</em></p>
               <p>
                 Curso de programação com Adonis, um ORM feito em Node.
@@ -451,13 +465,29 @@
             </div>
             <div class="resume-item">
               <h4>Curso de Typescript</h4>
-              <h5>2021 - 2021</h5>
+              <h5>2021</h5>
               <p><em>Alura</em></p>
               <p>
                 Curso de programação com Typescript.
               </p>
               <p>
                 <a href="https://github.com/PedroCF87/curso-Typescript">Link do projeto</a> desenvolvido durante o curso.
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Treinamento Assemble</h4>
+              <h5>2022</h5>
+              <p><em>Rocketseat</em></p>
+              <p>
+                Curso de liderança e gestão de produtos digitais.
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Innovation Leadership Program</h4>
+              <h5>2022</h5>
+              <p><em>Rocketseat</em></p>
+              <p>
+                Curso de liderança e gestão de produtos digitais.
               </p>
             </div>
           </div>
@@ -483,6 +513,17 @@
             </div>
             <div class="resume-item">
               <h4>Desenvolvedor Fullstack</h4>
+              <h5>2013 - 2021</h5>
+              <p><em>Workana.com, Home Office, Rio de Janeiro, RJ</em></p>
+              <ul>
+                <li>Desenvolvimento de projetos web em PHP.</li>
+                <li>Desenvolvimento de projetos web em Node.js.</li>
+                <li>Desenvolvimento de projetos web em React.</li>
+                <li>Desenvolvimento de aplicativos Android e IOS em React Native.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Desenvolvedor Fullstack</h4>
               <h5>2013 - 2015</h5>
               <p><em>PlanejaSites, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
@@ -495,17 +536,6 @@
               <p><em>MobiDesk, Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento de projetos web e mobile.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Desenvolvedor Fullstack</h4>
-              <h5>2013 - 2021</h5>
-              <p><em>Workana.com, Home Office, Rio de Janeiro, RJ</em></p>
-              <ul>
-                <li>Desenvolvimento de projetos web em PHP.</li>
-                <li>Desenvolvimento de projetos web em Node.js.</li>
-                <li>Desenvolvimento de projetos web em React.</li>
-                <li>Desenvolvimento de aplicativos Android e IOS em React Native.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -528,7 +558,7 @@
             </div>
             <div class="resume-item">
               <h4>Líder Técnico - Desenvolvedor Fullstack</h4>
-              <h5>Mai/2021 - Emprego atual</h5>
+              <h5>Mai/2021 - Maio/2022</h5>
               <p><em>Iron Fit (Portugal) - Home Office, Rio de Janeiro, RJ</em></p>
               <ul>
                 <li>Desenvolvimento front-end com Vue, ReactJS e NextJS.</li>
@@ -537,6 +567,17 @@
                 <li>DevOps AWS: CodeBuild, API Gateway.</li>
                 <li>DevOps Azure: Serverless Pipelines.</li>
                 <li>Gestão: Jira, Slack, Implementação de Git Flow (CODEOWNERS).</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Fundador - Desenvolvedor Fullstack</h4>
+              <h5>Maio/2022 - Atualmente</h5>
+              <p><em>Delfos - Home Office, Rio de Janeiro, RJ</em></p>
+              <ul>
+                <li>Desenvolvimento front-end com NextJS.</li>
+                <li>Desenvolvimento back-end com NodeJS.</li>
+                <li>Banco de dados MongoDB, PostgreeSQL.</li>
+                <li>Gestão: Jira.</li>
               </ul>
             </div>
 
@@ -578,9 +619,6 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/App_MT_GooglePlay.png" data-gall="portfolioGallery" class="venobox" title="App 1">
                     <i class="bx bx-plus"></i>
-                  </a>
-                  <a href="https://play.google.com/store/apps/details?id=com.mundodatelecom" target="_blank" title="Acesse o App Mundo da Telecom na Google Play">
-                    <i class="bx bx-link"></i>
                   </a>
                 </div>
               </div>
@@ -624,7 +662,6 @@
                 <p>Sistema Web do Mundo da Telecom, uma empresa de importação de equipamentos de telecomunicações.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/Home_Mundo_da_Telecom_GD.png" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -665,9 +702,6 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/Cadastro_01.png" data-gall="portfolioGallery" class="venobox" title="Web 3">
                     <i class="bx bx-plus"></i>
-                  </a>
-                  <a href="https://mundodatelecom.com.br/" target="_blank" title="Acesse o site do Mundo da Telecom">
-                    <i class="bx bx-link"></i>
                   </a>
                 </div>
               </div>
@@ -784,16 +818,14 @@
       </div>
     </section>
     
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Depoimentos</h2>
           <p>
             Depoimentos de alguns dos meus clientes do Workana.
           </p>
         </div>
-
         <div class="owl-carousel testimonials-carousel" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="testimonial-item">
@@ -848,9 +880,8 @@
           </div>
 
         </div>
-
       </div>
-    </section>
+    </section> -->
 
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
