--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Pedro Figueira</h1>
-      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Full Stack: NodeJS / ReactJS / PHP => Fundador da Delfos!!!"></span></p>
+      <p>Sou <span class="typed" data-typed-items="Desenvolvedor Full Stack: NodeJS / ReactJS / PHP, Fundador da Delfos (DevTool)!!!"></span></p>
       <div class="social-links">
         <a href="https://www.behance.net/pedrofigueira2" class="behance" target="_blank" title="Acesse o meu portfólio no Behance">
           <i class="bx bxl-behance"></i>
